frontend/test/should_pass/dot_002.grg
using attrib_model_001;

rule r {
	.-->.;
	.<--.-->.;
	.;
	.-->.<--.;
	-->.<--;
	.-->.<--;
	-->.<--.;
	-->.-->.-->;
	<--.<--.<--;

	replace {
		.-->.<--.;
		.;
		.;
		.<--.;
		.<-:Edge-.;
		.- e:EINT ->.;
		eval {
			e.a = 42 + e.a;
		}
	}
}

