frontend/test/should_fail/map_009.grg
using map_model_002;

rule assignMapToMap {
	a:A -e:E-> a;

	modify {
		eval {
			a.niceMap = e.spiceMap;
		}
	}
}
